--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ body {
   @include background;
   background-color: $primary-color;
   color: #fff;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7;
@@ -222,24 +222,19 @@ main {
     }
   }
 }
-
 $secondary-color: #eece1a;
-/*#form-page {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-*/
 
 //Page About Me
+
 #about-me-page {
+  margin-left: 2%;
+  margin-right: 2%;
   h1.lg-heading {
     text-align: center;
   }
 
   #presentation {
-    height: 40vh;
+    height: 400px;
     width: 100%;
 
     .bio-container {
@@ -250,7 +245,7 @@ $secondary-color: #eece1a;
       .about-me-portrait {
         display: grid;
         width: 30%;
-        height: 100%;
+        height: auto;
         place-items: center;
 
         img {
@@ -268,24 +263,23 @@ $secondary-color: #eece1a;
   }
   .container {
     display: grid;
-    place-items: center;
-    grid-template-areas: "a b c";
-    margin-top: 70px;
+    grid-template-areas: "a b c ";
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 5%;
-    first-job {
+    column-gap: 3%;
+    .first-job {
       grid-area: a;
     }
-    second-job {
+    .second-job {
       grid-area: b;
     }
-    third-job {
+    .third-job {
       grid-area: c;
     }
-
-    .skillsk-and-knowledge-boxes h2 {
+    h2 {
       color: $secondary-color;
-     text-shadow:0 0 3px rgb(26, 26, 9)
+    }
+    span {
+      font-weight: bold;
     }
   }
 }
@@ -293,51 +287,43 @@ $secondary-color: #eece1a;
 @media all and (max-width: 766px) {
   //Page About Me
   #about-me-page {
-    margin-left: 3%;
-    margin-right: 3%;
-    //
-
+    margin-left: 4%;
+    margin-right: 4%;
     #presentation {
       width: 100%;
-      height: auto;
-      margin-bottom: 3.5%;
+      height: 450px !important;
 
       h1.lg-heading {
         padding-top: 4%;
         height: 100px;
-        font-size: 2.5rem;
+        font-size: 2rem;
       }
 
       .bio-container {
-        width: 100%;
-
-        display: block;
+        width: 100% !important;
+        display: block !important;
 
         .about-me-portrait {
-          display: grid;
-          width: 100%;
-          height: 160px;
-          place-items: center;
+          display: grid !important;
+          margin-right: none !important;
+          width: 100% !important;
+          height: auto !important;
+          place-items: center !important;
+          margin-bottom: 15px;
 
           img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: solid 3px $secondary-color;
+            width: 150px !important;
+            height: 150px !important;
           }
         }
         #bio {
-          width: 100%;
+          width: 100% !important;
         }
       }
     }
     .container {
-      grid-template-areas: "a" "b" "c";
-      grid-template-columns: 1fr;
-      height: 600px;
-      margin-top: 0px;
-      .skillsk-and-knowledge-boxes {
-      }
+      grid-template-areas: "a" "b" "c" !important;
+      grid-template-columns: 1fr !important;
     }
   }
 }
@@ -435,62 +421,6 @@ $secondary-color: #eece1a;
   }
 }
 
-@media all and (max-width: 766px) {
-  //Page About Me
-  #about-me-page {
-    margin-left: 1%;
-    margin-right: 1%;
-    .menu-btn {
-      margin-right: -10px;
-    }
-    #presentation {
-      width: 100%;
-      height: auto;
-      margin-bottom: 3.5%;
-      #vertical-rubrique-align {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        h1 {
-          height: 100px;
-          font-size: 2rem;
-        }
-      }
-
-      .bio-container {
-        width: 100%;
-
-        display: block;
-
-        .about-me-portrait {
-          display: grid;
-          width: 100%;
-          height: 160px;
-          place-items: center;
-
-          img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            border: solid 3px $secondary-color;
-          }
-        }
-        #bio {
-          width: 100%;
-        }
-      }
-    }
-    .container {
-      grid-template-areas: "a" "b" "c";
-      grid-template-columns: 1fr;
-      height: 600px;
-      margin-top: 0px;
-      .skillsk-and-knowledge-boxes {
-      }
-    }
-  }
-}
-
 //Contact Form
 
 // Menu Button
@@ -583,7 +513,7 @@ $secondary-color: #eece1a;
   // Menu Button
 
   //Contact form after overlay button
-  body {
+  #contact-background {
     display: block;
 
     form {
