--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 * {
   box-sizing: border-box; }
 
-body {
+#bg-img {
   background-color: #444;
   color: #fff;
   height: 100vh;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7; }
-  body#bg-img {
+  #bg-img#bg-img {
     background: url(./images/coding-academy.jpeg);
     background-attachment: fixed;
     background-size: cover; }
-    body#bg-img:after {
+    #bg-img#bg-img:after {
       content: "";
       position: absolute;
       top: 0;
@@ -133,7 +133,8 @@ main {
 @media all and (max-width: 766px) {
   main#home {
     text-align: center;
-    align-items: center; }
+    align-items: center;
+    height: 100vh; }
     main#home h1 {
       margin-top: 10vh;
       line-height: 1;
@@ -294,7 +295,8 @@ main {
   display: grid;
   place-items: center;
   background: url(.././images/contact-background.jpg) no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  height: 100vh; }
   #contact-background form {
     background-color: rgba(15, 13, 13, 0.5);
     margin: auto;
