--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,9 @@ main {
       height: 110px; } }
 #about-me-page {
   margin-left: 2%;
-  margin-right: 2%; }
+  margin-right: 2%;
+  background-color: #444;
+  color: #fff; }
   #about-me-page h1.lg-heading {
     text-align: center; }
   #about-me-page #presentation {
@@ -198,7 +200,9 @@ main {
     #about-me-page .container h2 {
       color: #eece1a; }
     #about-me-page .container span {
-      font-weight: bold; }
+      color: #eece1a;
+      font-weight: bold;
+      text-decoration: underline #fff; }
 
 @media all and (max-width: 766px) {
   #about-me-page {
@@ -313,8 +317,7 @@ main {
       #contact-background form .form-title #color-form-title {
         color: #eece1a; }
     #contact-background form .contact-me {
-      padding: 0 30px;
-      height: 100%; }
+      padding: 0 30px; }
       #contact-background form .contact-me #error_message {
         margin-bottom: 20px;
         padding: 0px;
@@ -355,10 +358,11 @@ main {
 
 @media all and (max-width: 766px) {
   #contact-background {
-    display: block; }
+    display: block;
+    height: 100%; }
     #contact-background form {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       background-color: rgba(15, 13, 13, 0.5);
       margin: auto; }
       #contact-background form .form-title {
@@ -372,8 +376,7 @@ main {
         #contact-background form .form-title #color-form-title {
           color: #eece1a; }
       #contact-background form .contact-me {
-        padding: 0 30px;
-        height: 100%; }
+        padding: 0 30px; }
         #contact-background form .contact-me #error_message {
           margin-bottom: 10px;
           padding: 0px;
