--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,9 +12,6 @@ $background-opacity: 0.9;
 @mixin background {
   @if $show-home-image {
     &#bg-img {
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
       &:after {
         content: "";
         position: absolute;
@@ -189,10 +186,12 @@ main {
 
 //Responsive Home page
 @media all and (max-width: 766px) {
-  main#home {
+  #bg-img {
+    height:100vh;
+      main#home {
     text-align: center;
     align-items: center;
-    height: 100vh;
+    
     h1 {
       margin-top: 10vh;
       line-height: 1;
@@ -223,6 +222,9 @@ main {
     }
   }
 }
+    
+  }
+  
 $secondary-color: #eece1a;
 
 //Page About Me
