--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,44 +187,43 @@ main {
 //Responsive Home page
 @media all and (max-width: 766px) {
   #bg-img {
-    height:100vh;
-      main#home {
-    text-align: center;
-    align-items: center;
-    
-    h1 {
-      margin-top: 10vh;
-      line-height: 1;
-      margin-bottom: 1rem;
-      font-size: 3rem;
-    }
-  }
-  ul.menu-nav,
-  div.menu-branding {
-    width: 100%;
-    min-height: 0;
-    &.show {
-      transform: translate3d(0, 0, 0);
-    }
-  }
-  .menu-nav {
-    height: 75vh;
-    transform: translate3d(-100%, 0, 0);
-    font-size: 25px;
-  }
-  .menu-branding {
-    height: 25vh;
-    transform: translate3d(100%, 0, 0);
+    height: 100vh;
+    main#home {
+      text-align: center;
+      align-items: center;
 
-    img {
-      width: 110px;
-      height: 110px;
+      h1 {
+        margin-top: 10vh;
+        line-height: 1;
+        margin-bottom: 1rem;
+        font-size: 3rem;
+      }
+    }
+    ul.menu-nav,
+    div.menu-branding {
+      width: 100%;
+      min-height: 0;
+      &.show {
+        transform: translate3d(0, 0, 0);
+      }
+    }
+    .menu-nav {
+      height: 75vh;
+      transform: translate3d(-100%, 0, 0);
+      font-size: 25px;
+    }
+    .menu-branding {
+      height: 25vh;
+      transform: translate3d(100%, 0, 0);
+
+      img {
+        width: 110px;
+        height: 110px;
+      }
     }
   }
 }
-    
-  }
-  
+
 $secondary-color: #eece1a;
 
 //Page About Me
@@ -363,6 +362,9 @@ $secondary-color: #eece1a;
 
     .item {
       width: 100%;
+      position: relative;
+      margin: auto;
+
       img {
         width: 100%;
 
@@ -373,6 +375,7 @@ $secondary-color: #eece1a;
           @include easeOut;
         }
       }
+
       //Work Button Styles
       .btn {
         display: block;
